# fabrics-iac

./: .gitignore  devenv.nix  devenv.yaml  justfile  pyproject.toml
infra/00-bootstrap/: .terraform.lock.hcl  imports.tf
infra/01-fabric/: .terraform.lock.hcl  capacity.tf  git.tf  locals.tf  main.tf  outputs.tf  providers.tf  variables.tf  workspace.tf
notebooks/: data_ingestion.ipynb
scripts/: run_notebook.py
terraform/: .gitignore  README.md
terraform/00-bootstrap/: main.tf
terraform/01-fabric/: .terraform.lock.hcl  capacity.tf  locals.tf  workspace.tf
terraform/01-fabric/environments/: dev.tfvars  prod.tfvars
